WA-445: Fixes for gallery, now goes to viewport edge on mobile and is constrained by mobile gutters, as per design.

--- a/docroot/themes/custom/wateraid/components/image_gallery/image_gallery.scss
+++ b/docroot/themes/custom/wateraid/components/image_gallery/image_gallery.scss
@@ -5,9 +5,15 @@
     @include page-container;
 
     margin-top: $wa-spacing-07;
+    margin-left: calc(-1 * $container-padding-mobile);
+    margin-right: calc(-1 * $container-padding-mobile);
+    padding-left: $container-padding-mobile;
+    padding-right: $container-padding-mobile;
 
     @include desktop() {
       margin-top: $wa-spacing-09;
+      margin-left: 0;
+      margin-right: 0;
     }
   }
 
@@ -67,9 +73,16 @@
 
   &--dark {
     &[data-component-id="wateraid:image_gallery"] {
-      background-image: url("/themes/custom/wateraid/images/icons/wa-container-lg-wide.svg");
+      background-color: $wa-blue;
       background-size: 100% 100%;
-      padding: $wa-spacing-09;
+      padding-top: $wa-spacing-09;
+      padding-bottom: $wa-spacing-09;
+
+      @include desktop {
+        background-color: transparent;
+        background-image: url("/themes/custom/wateraid/images/icons/wa-container-lg-wide.svg");
+        padding: $wa-spacing-09;
+      }
     }
 
     .image-gallery__content--title,
